--- a/public/css/jobs.scss
+++ b/public/css/jobs.scss
@@ -33,6 +33,7 @@
 @import 'ui/share/share';
 @import 'ui/share/shareDesktop';
 @import 'ui/share/shareMobile';
+@import 'ui/share/shareSidebar';
 @import '../../assets/css/modules/oScreen';
 
 // Sections
