--- a/public/templates/client/jobs/employer/mobile/employerScreen.html
+++ b/public/templates/client/jobs/employer/mobile/employerScreen.html
@@ -1,11 +1,11 @@
 <screen-employer class="oScreen section zIndex-6" data-inner="hidden" data-loading="false" data-show="down" data-open="false">
 
-    <div name="wrapper" class="screenMobile oScreen__content">
+    <div ref="wrapper" class="screenMobile oScreen__content">
         <div class="screenMobile__navbar" data-gradient="white">
             <div onClick={ hide } onUpdate="none" class="screenMobile__nav__close"></div>
             <div class="screenMobile__nav__title maxW-80p" data-align="left">{ item.name }</div>
         </div>
-        <div name="content" class="section__content">
+        <div ref="content" class="section__content">
             <employer-content classname="employer" isPhone={ app.device.isPhone } item={ item } items={ items }></employer-content>
             <employer-vacancies-mobile items={ items } utils={ window._ } currency={ $store.jobs.dictionary.get("currency") }></employer-vacancies-mobile>
         </div>
@@ -20,10 +20,10 @@
         $Screens.module("employer", $);
 
         $.section = new app.plugins.sections($.root, {
-            content: $.wrapper
+            content: $.refs.wrapper
         });
 
-        $.scroll = $$($.content);
+        $.scroll = $$($.refs.content);
 
         $$($.tags["employer-vacancies-mobile"].root).on("click", ".employer__vacancies__item__title", function(e){
             e.preventDefault();
