--- a/public/templates/client/jobs/search/filter/searchFilterSalary.html
+++ b/public/templates/client/jobs/search/filter/searchFilterSalary.html
@@ -7,11 +7,11 @@
             от { onFormat(salary) }<svg class="jobs__search__filter__salary__rub" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125" style="enable-background:new 0 0 100 100;" xml:space="preserve"><g><path class="jobs__search__filter__salary__rub__color" d="M58.4,56.2c13.3,0,24.1-10.8,24.1-24.1S71.7,8,58.4,8H33.9v5.6V18v28.2h-9v10h9v8.3h-9v10h9v12.4h10V74.5h22.7v-10H43.9   v-8.3H58.4z M43.9,18h9.7c12.6,0,18.9,6.3,18.9,14.1s-6.3,14.1-14.1,14.1H43.9V18z"/></g></svg>
         </div>
         <div class="jobs__search__filter__range">
-            <input name="slider" onChange={ onChange } onInput={ onRange } onUpdate="none" type="range" min="10000" max="250000" step="5000" class="range range-{ app.device.isPhone ? 'l' : 's' } range-blueBright">
+            <input ref="slider" onChange={ onChange } onInput={ onRange } onUpdate="none" type="range" min="10000" max="250000" step="5000" class="range range-{ app.device.isPhone ? 'l' : 's' } range-blueBright">
         </div>
         <div onClick={ onRemove } onUpdate="none" if={ Url.parseQuery().salary } class="jobs__search__filter__item" data-select="true">от { Url.parseQuery().salary } руб.</div>
-        <div name="list" class="jobs__search__filter__items" data-animate={ isAnimate }>
-            <div name="container" class="jobs__search__filter__items__list">
+        <div ref="list" class="jobs__search__filter__items" data-animate={ isAnimate }>
+            <div ref="container" class="jobs__search__filter__items__list">
                 <div onClick={ onSelect } onUpdate="none" each={ item in _.sortArray($store.jobs[opts.item], "count", "desc") } no-reorder class="jobs__search__filter__item">
                     <div class="jobs__search__filter__item__title">{ item.name }</div>
                     <div class="jobs__search__filter__item__count">{ item.count }</div>
@@ -28,18 +28,20 @@
 
     $.salary = Url.parseQuery().salary ? Url.parseQuery().salary : $.default;
 
-    $.list = $$($.list);
-    $.container = $$($.container);
-
     $.on("before-mount", function(){
         $.active = $.opts.active;
-        $.slider.value = $.salary;
     });
 
     $.on("mount", function(){
+        $.list = $$($.refs.list);
+        $.container = $$($.refs.container);
+        $.slider = $.refs.slider;
+        $.slider.value = $.salary;
+
         if ($.active){
             $.list.css("height", $.container.height() + "px");
         }
+        $.update();
     });
 
     $.on("update", function(){
