--- a/public/templates/client/jobs/search/panel/mobile/panel.html
+++ b/public/templates/client/jobs/search/panel/mobile/panel.html
@@ -4,7 +4,7 @@
         <div class="jobs__search__nav__form__wrapper col-xs-12">
             <div class="jobs__search__nav__form">
                 <div class="input-group input-group-icon input-group-l" data-item="vacancy">
-                    <ui-input name="vacancy" placeholder="Я ищу..." autosuggest="getSuggestVacancy" autosuggestSize="l" size="l"></ui-input>
+                    <ui-input ref="vacancy" placeholder="Я ищу..." autosuggest="getSuggestVacancy" autosuggestSize="l" size="l"></ui-input>
                     <div class="input-icon">
                         <svg class="input-svg input-svg-search" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                             <path d="M 21 3 C 11.623004 3 4 10.623004 4 20 C 4 29.376996 11.623004 37 21 37 C 24.709505 37 28.140329 35.803849 30.9375 33.78125 L 44.09375 46.90625 L 46.90625 44.09375 L 33.90625 31.0625 C 36.460556 28.087561 38 24.221313 38 20 C 38 10.623004 30.376996 3 21 3 z M 21 5 C 29.296116 5 36 11.703884 36 20 C 36 28.296116 29.296116 35 21 35 C 12.703884 35 6 28.296116 6 20 C 6 11.703884 12.703884 5 21 5 z"></path>
@@ -29,13 +29,13 @@
     $.on("mount", function(){
         $Sections.module("search.panel", $);
 
-        $.vacancy._tag.on("autocomplete.select", function(){
+        $.refs.vacancy.on("autocomplete.select", function(){
             $.search();
         });
     });
 
     $.search = function(){
-        var text = _.clean($.vacancy._tag.value);
+        var text = _.clean($.refs.vacancy.value);
 
         var params = {};
         if (text) params.text = text;
