--- a/public/templates/client/jobs/search/searchForm.html
+++ b/public/templates/client/jobs/search/searchForm.html
@@ -1,8 +1,8 @@
 <jobs-search-form class="section row xs-plr-xss">
 
-    <div class="col-md-11 col-lg-10 xs-mb-xss">
+    <div class="col-md-10 xs-mb-xss">
         <div class="input-group input-group-icon input-group-{ app.device.isPhone ? 'l' : 'm' }" data-item="vacancy">
-            <ui-input name="vacancy" placeholder="Я ищу..." autosuggest="getSuggestVacancy" autosuggestSize="l" size={ l : app.device.isPhone }></ui-input>
+            <ui-input ref="vacancy" placeholder="Я ищу..." autosuggest="getSuggestVacancy" autosuggestSize="l" size={ l : app.device.isPhone }></ui-input>
             <div class="input-icon">
                 <svg class="input-svg input-svg-search" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                     <path d="M 21 3 C 11.623004 3 4 10.623004 4 20 C 4 29.376996 11.623004 37 21 37 C 24.709505 37 28.140329 35.803849 30.9375 33.78125 L 44.09375 46.90625 L 46.90625 44.09375 L 33.90625 31.0625 C 36.460556 28.087561 38 24.221313 38 20 C 38 10.623004 30.376996 3 21 3 z M 21 5 C 29.296116 5 36 11.703884 36 20 C 36 28.296116 29.296116 35 21 35 C 12.703884 35 6 28.296116 6 20 C 6 11.703884 12.703884 5 21 5 z"></path>
@@ -10,15 +10,15 @@
             </div>
         </div>
     </div>
-    <div class="col-md-11 col-lg-10">
+    <div class="col-md-10">
         <div class="input-group input-group-icon input-group-{ app.device.isPhone ? 'l' : 'm' }" data-item="city">
-            <ui-input name="area" placeholder="Где?" autosuggest="getSuggestCity" autosuggestSize="l" size={ l : app.device.isPhone }></ui-input>
+            <ui-input ref="area" placeholder="Где?" autosuggest="getSuggestCity" autosuggestSize="l" size={ l : app.device.isPhone }></ui-input>
             <div class="input-icon">
                 <svg class="input-svg input-svg-location" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125" style="enable-background:new 0 0 100 100;" xml:space="preserve"><path d="M50,5C31.3,5,16,19.6,16,37.6l0,0.1c0.4,12.1,6,25.1,16.8,38.9c7.9,10.1,15.6,16.7,16,17l1.3,1.1l1.3-1.1  c0.3-0.3,8-6.8,16-17C78,62.8,83.6,49.8,84,37.6C84,19.6,68.7,5,50,5z M64.1,74C58.3,81.5,52.5,87,50,89.3  C47.5,87,41.7,81.5,35.9,74c-7-8.9-15.4-22.5-15.9-36.4C20,21.8,33.5,9,50,9c16.5,0,30,12.8,30,28.6C79.6,51.5,71.1,65.1,64.1,74z   M50,24c-8.3,0-15,6.7-15,15s6.7,15,15,15c8.3,0,15-6.7,15-15S58.3,24,50,24z M50,50c-6.1,0-11-4.9-11-11s4.9-11,11-11s11,4.9,11,11  S56.1,50,50,50z"/></svg>
             </div>
         </div>
     </div>
-    <div class="col-md-3 col-lg-4 xs-pt-m text-center-xs">
+    <div class="col-md-4 xs-pt-m text-center-xs">
         <button onClick={ onSuccess } onUpdate="none" class="btn btn-{ app.device.isPhone ? 'l' : 'm' } btn-primary-hover-success btn-search xs-plr-l">Найти</button>
     </div>
 
@@ -27,27 +27,10 @@
     var $ = this,
     $scope = $$($.root);
 
-    $.on("before-mount", function(){
-        if (!window.$State) return;
-
-        var area = $State.select("area").get(),
-            text = Url.parseQuery().text;
-
-        if (area){
-            $.area._tag.update({
-                id: area.id,
-                value: area.name
-            })
-        }
-        if (text){
-            $.vacancy._tag.update({
-                value: text
-            })
-        }
-    });
-
     $.on("mount", function(){
         $Sections.module("search.form", $);
+        $.area = $.refs.area;
+        $.vacancy = $.refs.vacancy;        
 
         $scope.on("focus blur", "input[type='text']", function(e){
             if (e.type == "focus" || e.type == "focusin"){
@@ -65,22 +48,39 @@
                 }
             }
         });
+
+        if (!window.$State) return;
+
+        var area = $State.select("area").get(),
+            text = Url.parseQuery().text;
+
+        if (area){
+            $.area.update({
+                id: area.id,
+                value: area.name
+            })
+        }
+        if (text){
+            $.vacancy.update({
+                value: text
+            })
+        }
     });
 
     $.onSuccess = function(params){
-        var text = _.clean($.vacancy._tag.value),
-            area = $.area._tag.id;
+        var text = _.clean($.vacancy.value),
+            area = $.area.id;
 
         if (window.$State && $Sections && $Sections.search && $Sections.search.filter){
             var params = Url.parseQuery();
 
             if (text) params.text = text;
             else if (params.text) delete params.text;
-            if (area && _.clean($.area._tag.value)){
+            if (area && _.clean($.area.value)){
                 params.area = area;
                 $State.select("area").set({
                     id: area,
-                    name: $.area._tag.value
+                    name: $.area.value
                 });
             }
             else if (params.area){
