--- a/public/templates/client/jobs/vacancy/mobile/vacancyScreen.html
+++ b/public/templates/client/jobs/vacancy/mobile/vacancyScreen.html
@@ -1,19 +1,19 @@
 <screen-vacancy class="oScreen section zIndex-5" data-inner="hidden" data-loading="false" data-show="right" data-open="false">
 
-    <div name="wrapper" class="screenMobile oScreen__content">
+    <div ref="wrapper" class="screenMobile oScreen__content">
         <div class="screenMobile__navbar">
             <div onClick={ hide } onUpdate="none" class="screenMobile__nav__back"></div>
-            <div if={ item.salary } class="screenMobile__nav__title maxW-55p" data-align="left">{ 'от' : item.salary.from } { _.numberFormat(item.salary.from, 0, ".", " ") } <span if={ item.salary.to }>до { _.numberFormat(item.salary.to, 0, ".", " ") }</span> { _.findWhere($store.jobs.dictionary.get("currency"), {"code": item.salary.currency}).abbr }</div>
-            <div if={ !item.salary && item.area.name } class="screenMobile__nav__title maxW-55p" data-align="left">{ item.area.name }</div>
+            <div if={ item && item.salary } class="screenMobile__nav__title maxW-55p" data-align="left">{ 'от' : item.salary.from } { _.numberFormat(item.salary.from, 0, ".", " ") } <span if={ item.salary.to }>до { _.numberFormat(item.salary.to, 0, ".", " ") }</span> { _.findWhere($store.jobs.dictionary.get("currency"), {"code": item.salary.currency}).abbr }</div>
+            <div if={ item && !item.salary && item.area.name } class="screenMobile__nav__title maxW-55p" data-align="left">{ item.area.name }</div>
             <div class="screenMobile__nav__buttons">
                 <jobs-panel-response-mobile class="screenMobile__nav__buttons__item" size="s" item={ item }></jobs-panel-response-mobile>
                 <jobs-panel-favorite-mobile class="jobs__search__nav__options__item" size="s"></jobs-panel-favorite-mobile>
             </div>
         </div>
-        <div name="content" class="section__content">
+        <div ref="content" class="section__content">
             <vacancy-content classname="vacancy" item={ item } utils={ window._ } currency={ $store.jobs.dictionary.get("currency") } isPhone={ app.device.isPhone }></vacancy-content>
             <vacancy-panel-mobile item={ item }></vacancy-panel-mobile>
-            <div name="preloader" class="vacancy__similary__preloader">
+            <div ref="preloader" class="vacancy__similary__preloader">
                 <div class="vacancy__similary__preloader__spinner"></div>
                 <vacancy-similary items={ items } utils={ window._ } currency={ $store.jobs.dictionary.get("currency") }></vacancy-similary>
             </div>
@@ -31,7 +31,7 @@
         $Screens.module("vacancy", $);
 
         $.section = new app.plugins.sections($.root, {
-            content: $.wrapper
+            content: $.refs.wrapper
         });
 
         $scope.on('swipeRight', function(){
@@ -56,7 +56,8 @@
             $.show($el.attr("data-id"), $el.attr("href"));
         });
 
-        $.scroll = $$($.content);
+        $.scroll = $$($.refs.content);
+        $.preloader = $.refs.preloader;
     });
 
     $.show = function(id, url, callback){
