--- a/assets/css/sections/list/_resumeList.scss
+++ b/assets/css/sections/list/_resumeList.scss
@@ -51,7 +51,7 @@
             @extend .flex-centered;
             @extend .pos-abs;
             @extend .b-l;
-            @extend .r-l;
+            @extend .l-50;
             @extend .cursor-pointer;
 
             &:hover {
