--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,6 +61,9 @@
 @import 'sections/mobile/tutorial/welcome';
 @import 'sections/profile/profile';
 
+// messenger
+@import 'sections/messenger/messengerLauncher';
+
 // jqtest
 // @import 'sections/jqtest/jqtest';
 // @import 'sections/jqtest/jqtestEnter';
@@ -82,9 +85,9 @@
 @import 'sections/payment/payment';
 
 // offers
-@import 'sections/offers/premium/premium';
-@import 'sections/offers/premium/slides';
-@import 'sections/offers/premium/ui';
+// @import 'sections/offers/premium/premium';
+// @import 'sections/offers/premium/slides';
+// @import 'sections/offers/premium/ui';
 
 // overview
 // @import 'sections/overview/main';
