--- a/assets/templates/sections/list/resumeList.html
+++ b/assets/templates/sections/list/resumeList.html
@@ -35,6 +35,8 @@
         </div>
     </div>
 
+    <section-messenger></section-messenger>
+
     <div onClick={ open.sharePanel } class="resume__list__shareButton">
         <div class="resume__list__shareButton__text">Поделиться сервисом</div>
     </div>
