--- a/assets/templates/v3/modules/notify.html
+++ b/assets/templates/v3/modules/notify.html
@@ -24,6 +24,11 @@
 
         if (!app.device.isPhone){
             setTimeout(function(){
+                $.update(
+                    _.extend($.default(), {
+                        active: false
+                    })
+                );
                 $.root.style.display = "block";
             }, 20);
         }
