--- a/views/index-mobile.html
+++ b/views/index-mobile.html
@@ -27,7 +27,7 @@
     <link rel="manifest" href="/manifest.json">
     <link id="styles" rel="stylesheet" href="/public/css/style.mobile.css">
 </head>
-<body id="renderServer" class="appLoading">
+<body id="renderSide" class="appLoading">
 
     {{ content | safe }}
 
@@ -37,7 +37,7 @@
 
     <section-auth></section-auth>
     <section-notify></section-notify>
-    <section-loader></section-loader>    
+    <section-loader></section-loader>
 
     <!--/ VENDORS /-->
     <!-- <script src="/assets/js/libs/jquery.min.js"></script>
