--- a/views/index.html
+++ b/views/index.html
@@ -24,7 +24,7 @@
     <link rel="manifest" href="/manifest.json">
     <link id="styles" rel="stylesheet" href="/public/css/style.css">
 </head>
-<body id="renderServer">
+<body id="renderSide">
 
     {{ content | safe }}
 
@@ -36,8 +36,8 @@
     <script src="/assets/js/libs/jquery.min.js"></script>
     <script src="/assets/js/libs/jquery.mobile.custom.min.js"></script>
     <script src="/assets/js/libs/modernizr.custom.js"></script>
-    <script src="/assets/js/libs/fastclick.min.js"></script>
-    <script src="/assets/js/libs/riot/riot+compiler.update.js"></script>
+    <script src="/assets/js/libs/fastclick.js"></script>
+    <script src="/assets/js/libs/riot-3.3.2/riot+compiler.update.js"></script>
     <script src="/assets/js/libs/baobab.js"></script>
     <script src="/assets/js/libs/underscore-min.js"></script>
     <script src="/assets/js/libs/store.min.js"></script>
@@ -50,9 +50,9 @@
     <script src="/public/templates/commons/modules/auth/forms/signIn.tag" type="riot/tag"></script>
     <script src="/public/templates/commons/modules/auth/forms/signUp.tag" type="riot/tag"></script>
     <script src="/public/templates/commons/modules/auth/forms/remember.tag" type="riot/tag"></script>
-    <script src="/assets/templates/modules/notify.html" type="riot/tag"></script>
+    <script src="/assets/templates/v3/modules/notify.html" type="riot/tag"></script>
     <script src="/assets/templates/modules/loader.html" type="riot/tag"></script>
-    <script src="/assets/templates/ui/input.html" type="riot/tag"></script>
+    <script src="/assets/templates/v3/ui/input.html" type="riot/tag"></script>
     <script src="/public/templates/commons/popup/blogSubscribe.tag" type="riot/tag"></script>
     <script src="/public/templates/commons/popup/blogSubscribeForm.tag" type="riot/tag"></script>
     <script src="/public/templates/commons/icons/social/icon-fb.tag" type="riot/tag"></script>
