--- a/views/private.html
+++ b/views/private.html
@@ -58,6 +58,7 @@
     <script src="/assets/js/plugins/marquee.js"></script>
     <script src="/assets/js/plugins/marquee.play.js"></script>
     <script src="/assets/js/plugins/screens.js"></script>
+    <script src="/assets/js/plugins/scroll/scroll.Animate.js"></script>
     <script src="/assets/js/components/features/premium.js"></script>
 
 
