--- a/assets/css/base/_fonts.scss
+++ b/assets/css/base/_fonts.scss
@@ -3,6 +3,7 @@
 @import 'fonts/Proxima/style';
 @import 'fonts/Gotham/style';
 @import 'fonts/HelveticaNeue/style';
+@import 'fonts/Icons/hobby/style';
 
 .fontFamily-roboto {
     font-family:$roboto;
