--- a/assets/css/sections/overview/premium/_header.scss
+++ b/assets/css/sections/overview/premium/_header.scss
@@ -30,7 +30,7 @@
     @extend .t0;
     @extend .l50;
     transform:translate3d(-50%, 0, 0);
-    opacity:0.001;
+    // opacity:0.001;
     @extend .willChange-tp;
 
     &--animate {
