--- a/public/css/base/_fonts.scss
+++ b/public/css/base/_fonts.scss
@@ -3,6 +3,7 @@
 @import '../../assets/css/fonts/Gotham/style';
 @import '../../assets/css/fonts/Graphik/style';
 @import '../../assets/css/fonts/HelveticaNeue/style';
+@import '../../assets/css/fonts/Icons/hobby/style';
 
 .fontFamily-roboto {
     font-family:$roboto;
