--- a/views/index.html
+++ b/views/index.html
@@ -28,72 +28,21 @@
 
     {{ content | safe }}
 
-    <section-auth></section-auth>
+    <!-- <section-auth></section-auth>
     <section-notify></section-notify>
-    <section-loader></section-loader>
+    <section-loader></section-loader> -->
 
     <!--/ VENDORS /-->
-    <script src="/assets/js/libs/jquery.min.js"></script>
-    <script src="/assets/js/libs/jquery.mobile.custom.min.js"></script>
-    <script src="/assets/js/libs/modernizr.custom.js"></script>
-    <script src="/assets/js/libs/fastclick.js"></script>
-    <script src="/assets/js/libs/riot-3.3.2/riot+compiler.update.js"></script>
-    <script src="/assets/js/libs/baobab.js"></script>
-    <script src="/assets/js/libs/underscore-min.js"></script>
-    <script src="/assets/js/libs/store.min.js"></script>
-    <script src="/assets/js/libs/TweenLite-1.19.0.min.js"></script>
-    <script src="/assets/js/libs/afterlag-js/dist/afterlag.min.js"></script>
+    <script src="/public/js/app.build.js"></script>
 
     <!--/ templates /-->
-    <script src="/public/templates/commons/modules/auth/auth.tag" type="riot/tag"></script>
-    <script src="/public/templates/commons/modules/auth/authSocial.tag" type="riot/tag"></script>
-    <script src="/public/templates/commons/modules/auth/forms/signIn.tag" type="riot/tag"></script>
-    <script src="/public/templates/commons/modules/auth/forms/signUp.tag" type="riot/tag"></script>
-    <script src="/public/templates/commons/modules/auth/forms/remember.tag" type="riot/tag"></script>
-    <script src="/assets/templates/v3/modules/notify.html" type="riot/tag"></script>
-    <script src="/assets/templates/modules/loader.html" type="riot/tag"></script>
-    <script src="/assets/templates/v3/ui/input.html" type="riot/tag"></script>
-    <script src="/public/templates/commons/popup/blogSubscribe.tag" type="riot/tag"></script>
-    <script src="/public/templates/commons/popup/blogSubscribeForm.tag" type="riot/tag"></script>
-    <script src="/public/templates/commons/icons/social/icon-fb.tag" type="riot/tag"></script>
-    <script src="/public/templates/commons/icons/social/icon-vk.tag" type="riot/tag"></script>
-    <script src="/public/templates/commons/icons/social/icon-tw.tag" type="riot/tag"></script>
-    <script src="/public/templates/commons/icons/social/icon-dk.tag" type="riot/tag"></script>
-    <script src="/public/templates/commons/icons/social/icon-gl.tag" type="riot/tag"></script>
+    <!-- <script src="/public/templates/commons/modules/auth/auth.tag" type="riot/tag"></script> -->
+    <script src="/public/js/templates.js"></script>
 
     <!--/ JS components /-->
-    <script src="/assets/js/components/commons/app.js"></script>
-    <script src="/assets/js/components/commons/request.js"></script>
-    <script src="/assets/js/components/commons/afterlag.js"></script>
-    <script src="/assets/js/components/commons/common.js"></script>
-    <script src="/assets/js/components/commons/utils.js"></script>
-    <script src="/assets/js/components/commons/modules.js"></script>
-    <script src="/assets/js/components/features/premium.js"></script>
-    <script src="/assets/js/components/features/navbar.js"></script>
-
-    <script src="/public/js/commons/config.js"></script>
-    <script src="/public/js/commons/metrika.js"></script>
-    <script src="/public/js/commons/sections.js"></script>
-
-    <script src="/assets/js/plugins/chartRadial.js"></script>
-    <script src="/assets/js/plugins/animate.js"></script>
-    <script src="/assets/js/plugins/slider.js"></script>
-    <script src="/assets/js/plugins/metrika.js"></script>
-    <script src="/assets/js/plugins/share.js"></script>
-    <script src="/assets/js/plugins/eventsEmitter.js"></script>
-    <script src="/assets/js/plugins/scroll/scroll.Animate.js"></script>
-    <script src="/assets/js/plugins/scroll/scroll.Parallax.js"></script>
-    <script src="/assets/js/libs/skycons/skycons.js"></script>
-
-    <script src="/public/js/sections/nav.js"></script>
-    <script src="/public/js/sections/home.js"></script>
-    <script src="/public/js/sections/premium.js"></script>
-    <script src="/public/js/sections/jqtest.js"></script>
-    <script src="/public/js/sections/blog.js"></script>
-    <script src="/public/js/sections/blogContent.js"></script>
-    <script src="/public/js/sections/jobs/jobsHome.js"></script>
+    <script src="/public/js/app.js"></script>
     <script src="/public/js/init.js"></script>
-    <script src="https://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU"></script>
+    <!-- <script src="https://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU"></script> -->
 
 </body>
 </html>
