--- a/views/private.html
+++ b/views/private.html
@@ -55,10 +55,12 @@
 
     <script src="/assets/js/commons.js"></script>
     <script src="/assets/js/plugins.js"></script>
+    <script src="/assets/js/plugins/marquee.effects.js"></script>
     <script src="/assets/js/plugins/marquee.js"></script>
     <script src="/assets/js/plugins/marquee.play.js"></script>
     <script src="/assets/js/plugins/screens.js"></script>
     <script src="/assets/js/plugins/scroll/scroll.Animate.js"></script>
+    <script src="/assets/js/plugins/scroll/scroll.Parallax.js"></script>
     <script src="/assets/js/components/features/premium.js"></script>
 
 
